My POrg/src/objects/Recipe__c.object
<CustomObject>
    <fields>
        <fullName>Dish__c</fullName>
        <label>Dish</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Prep_Time__c</fullName>
        <label>Prep Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Side__c</fullName>
        <label>Side</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <label>Star Rating</label>
        <type>Url</type>
    </fields>
    <label>Recipe</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recipe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>